# Asincronicity

./: .gitignore  README.md  pyproject.toml
examples/: day1_demo.py  day2_demo.py  day3_demo.py
src/async_crawler/: __init__.py  core.py  html_parser.py  queue.py  semaphore_manager.py
tests/: test_day1_crawler.py  test_day2_parser.py  test_day3_crawler.py
